...

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextWorkoutGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/profile_u_goal_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
...
                android:text="@string/profile_workout_categories"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxArms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat_0" />

            <CheckBox
                android:id="@+id/checkBoxBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat_1" />

            <CheckBox
                android:id="@+id/checkBoxCardio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat_2" />

            <CheckBox
                android:id="@+id/checkBoxCore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat_3" />

            <CheckBox
                android:id="@+id/checkBoxLegs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat_4" />

            <TextView
                android:id="@+id/textViewWorkoutDifficultyLabelU"
...

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/radioButtonDiffE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/difficulty_E" />

                <RadioButton
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/difficulty_M" />

                <RadioButton
                    android:id="@+id/radioButtonDiffH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/difficulty_H" />
            </RadioGroup>

            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/profile_u_update"
...
