...
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/buttonUpdateStats"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="end"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="-10dp"
...
                android:text="@string/profile_workout_goal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewUserWorkoutGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profile_NA"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
...
                android:text="@string/profile_workout_categories"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewWorkoutCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profile_NA"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
...
